--- a/oferta.html
+++ b/oferta.html
@@ -7,15 +7,15 @@
     <link rel="canonical" href="https://russianstocks-ai.streamlit.app/oferta">
     <link rel="alternate" hreflang="ru" href="https://russianstocks-ai.streamlit.app/oferta">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net 'unsafe-inline'; font-src https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https:; frame-ancestors 'none';">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Добавлена иконка для сайта (favicon) -->
-    <link rel="apple-touch-icon" href="favicon.png" sizes="180x180"> <!-- Для iOS, если нужно -->
-    <style>:root{--primary:#001F3F;--secondary:#003366;--accent:#FFD700;--text-primary:#1a202c;--bg-primary:#f7fafc;--shadow-sm:0 4px 12px rgba(0,0,0,.08);--shadow-md:0 10px 30px rgba(0,31,63,.1);--border-radius:12px;--transition:all .3s ease;}body{font-family:Inter,sans-serif;background:var(--bg-primary);color:var(--primary);line-height:1.5;}.navbar{background:rgba(255,255,255,.95);box-shadow:var(--shadow-sm);padding:0.8rem 0;position:fixed;top:0;width:100%;z-index:1000;transition:var(--transition);}.navbar-brand{font-size:1.2rem;}.nav-link{font-size:0.9rem;transition:var(--transition);}.nav-link:hover{color:var(--accent);}.container.my-5{margin-top:3rem !important;margin-bottom:3rem !important;padding:1rem;}h1{font-size:2rem;text-align:center;}.card{border-radius:var(--border-radius);box-shadow:var(--shadow-sm);transition:var(--transition);}.card:hover{box-shadow:var(--shadow-md);transform:translateY(-2px);}.card-body{padding:1.5rem;}.card-title{font-size:1.2rem;margin-bottom:0.5rem;}.card-text{font-size:0.9rem;line-height:1.6;}.btn-primary{background:var(--accent);border-color:var(--accent);color:var(--primary);font-size:0.9rem;padding:0.4rem 0.8rem;transition:var(--transition);}.btn-primary:hover{background:#FFA500;transform:translateY(-1px);}.footer{background:var(--primary);color:#fff;padding:15px 0;font-size:0.8rem;text-align:center;}/* ИЗМЕНЕНО: Увеличенный полупрозрачный cookie-баннер */.cookie-banner{position:fixed;bottom:0;left:0;width:100%;background:rgba(255,255,255,0.9);backdrop-filter:blur(6px);color:var(--text-primary);box-shadow:var(--shadow-md);z-index:9999;transform:translateY(100%);transition:var(--transition);padding:20px;border-top:1px solid var(--primary);font-size:1rem;min-height:70px;border-radius:12px 12px 0 0;}.cookie-banner.show{transform:translateY(0);}.cookie-banner p{margin:0;display:inline-flex;align-items:center;}.cookie-banner a{color:var(--accent);text-decoration:underline;margin-left:5px;}.cookie-banner .btn{margin:0 10px;font-size:1rem;padding:10px 20px;border-radius:24px;min-width:160px;}.cookie-banner .btn:hover{transform:translateY(-2px);}@media (max-width:768px){.container.my-5{padding:0.5rem;}.cookie-banner{padding:15px;font-size:0.9rem;text-align:center;min-height:60px;}.cookie-banner .btn{display:block;margin:10px auto;min-width:140px;}}</style>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="favicon.png" sizes="180x180">
+    <style>:root{--primary:#001F3F;--secondary:#003366;--accent:#FFD700;--text-primary:#1a202c;--bg-primary:#f7fafc;--shadow-sm:0 4px 12px rgba(0,0,0,.08);--shadow-md:0 10px 30px rgba(0,31,63,.1);--border-radius:12px;--transition:all .3s ease;}body{font-family:Inter,sans-serif;background:var(--bg-primary);color:var(--primary);line-height:1.5;}.navbar{background:rgba(255,255,255,.95);box-shadow:var(--shadow-sm);padding:0.8rem 0;position:fixed;top:0;width:100%;z-index:1000;transition:var(--transition);}.navbar-brand{font-size:1.2rem;}.nav-link{font-size:0.9rem;transition:var(--transition);padding:0.5rem 1rem;}.nav-link:hover{color:#DAA520;}.container.my-5{margin-top:3rem !important;margin-bottom:3rem !important;padding:1rem;}h1{font-size:2rem;text-align:center;}.card{border-radius:var(--border-radius);box-shadow:var(--shadow-sm);transition:var(--transition);}.card:hover{box-shadow:var(--shadow-md);transform:translateY(-2px);}.card-body{padding:1.5rem;}.card-title{font-size:1.2rem;margin-bottom:0.5rem;}.card-text{font-size:0.9rem;line-height:1.6;}.btn-primary{background:var(--accent);border-color:var(--accent);color:var(--primary);font-size:0.9rem;padding:0.4rem 0.8rem;transition:var(--transition);min-height:48px;}.btn-primary:hover{background:#FFA500;transform:translateY(-1px);}.footer{background:var(--primary);color:#fff;padding:15px 0;font-size:0.8rem;text-align:center;}.cookie-banner{position:fixed;bottom:0;left:0;width:100%;background:rgba(255,255,255,0.9);backdrop-filter:blur(6px);color:var(--text-primary);box-shadow:var(--shadow-md);z-index:9999;transform:translateY(100%);transition:var(--transition);padding:20px;border-top:1px solid var(--primary);font-size:1rem;min-height:70px;border-radius:12px 12px 0 0;}.cookie-banner.show{transform:translateY(0);}.cookie-banner p{margin:0;display:inline-flex;align-items:center;}.cookie-banner a{color:var(--accent);text-decoration:underline;margin-left:5px;}.cookie-banner .btn{margin:0 10px;font-size:1rem;padding:10px 20px;border-radius:24px;min-width:160px;min-height:48px;}.cookie-banner .btn:hover{transform:translateY(-2px);}@media (max-width:768px){.container.my-5{padding:0.5rem;}.cookie-banner{padding:15px;font-size:0.9rem;text-align:center;min-height:60px;}.cookie-banner .btn{display:block;margin:10px auto;min-width:140px;}}</style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg" aria-label="Навигация по документам">
@@ -23,9 +23,9 @@
             <a class="navbar-brand" href="index.html">RussianStocks AI</a>
             <div class="collapse navbar-collapse justify-content-end">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener">Дисклеймер</a></li>
-                    <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener">Конфиденциальность</a></li>
-                    <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener">Условия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="disclaimer.html" rel="noopener" aria-label="Дисклеймер">Дисклеймер</a></li>
+                    <li class="nav-item"><a class="nav-link" href="privacy.html" rel="noopener" aria-label="Политика конфиденциальности">Конфиденциальность</a></li>
+                    <li class="nav-item"><a class="nav-link" href="terms.html" rel="noopener" aria-label="Условия использования">Условия</a></li>
                 </ul>
             </div>
         </div>
@@ -34,70 +34,70 @@
         <h1>Публичная оферта</h1>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Исполнитель</h5>
+                <p class="card-title">Исполнитель</p>
                 <p class="card-text">Веретенников Денис Андреевич, самозанятый, ИНН: 254300715808.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Предмет Оферты</h5>
+                <p class="card-title">Предмет Оферты</p>
                 <p class="card-text">Исполнитель предоставляет Пользователю (Акцептанту) доступ к сервису RussianStocks AI для получения прогнозов цен акций (образовательный/информационный характер на основе Transformer).</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Акцепт Оферты</h5>
+                <p class="card-title">Акцепт Оферты</p>
                 <p class="card-text">Полный и безусловный акцепт — использование сервиса, регистрация email или оплата. Акцепт подтверждает согласие со всеми условиями для AI-прогнозов.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Услуги</h5>
+                <p class="card-title">Услуги</p>
                 <p class="card-text">- Бесплатно: Прогнозы для SBER и GAZP на 1 день.<br>- Премиум: Доступ ко всем тикерам (200+), прогнозам на 30 дней, уведомлениям — 500 руб./30 дней (автопродление, отмена в любой момент).</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Оплата</h5>
+                <p class="card-title">Оплата</p>
                 <p class="card-text">Через YooKassa. Чеки генерируются автоматически и отправляются на email (ФЗ-54). Оплата подтверждает акцепт для премиум AI-трейдинга.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Возврат</h5>
+                <p class="card-title">Возврат</p>
                 <p class="card-text">В течение 14 дней без объяснения причин (ФЗ-2300-1). Запрос на veretenni@bk.ru. Возврат на исходный счет в 10 дней.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Права и обязанности</h5>
+                <p class="card-title">Права и обязанности</p>
                 <p class="card-text">- Исполнитель: Обеспечивает доступ, точность данных от MOEX.<br>- Пользователь: Не использовать для незаконных целей, не перепродавать прогнозы.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Ответственность</h5>
+                <p class="card-title">Ответственность</p>
                 <p class="card-text">Исполнитель не несет ответственности за убытки от использования прогнозов (ФЗ-39).</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Изменения</h5>
+                <p class="card-title">Изменения</p>
                 <p class="card-text">Изменения публикуются на сайте за 7 дней.</p>
             </div>
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title">Срок действия</h5>
+                <p class="card-title">Срок действия</p>
                 <p class="card-text">Бессрочно, до отзыва Оферты.</p>
             </div>
         </div>
-        <a href="https://russianstocks-ai.streamlit.app/" class="btn btn-primary">Вернуться к услугам</a>
+        <a href="https://russianstocks-ai.streamlit.app/" class="btn btn-primary" rel="nofollow">Вернуться к услугам</a>
     </main>
     <footer class="footer">
         <p>&copy; 2025 RussianStocks AI. Все права защищены. Не инвестиционный совет. Обновлено: 23.10.2025.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script>document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
+    <script>if (window.trustedTypes) {trustedTypes.createPolicy('default', {createHTML: (s) => s, createScriptURL: (s) => s, createScript: (s) => s});} document.addEventListener('DOMContentLoaded',()=>{if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.setAttribute('aria-label','Баннер согласия на использование cookies'); banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener" aria-label="Подробнее о политике конфиденциальности">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
 </body>
 </html>
